--- a/texFiles/output_table.tex
+++ b/texFiles/output_table.tex
@@ -5,7 +5,7 @@
 \begin{tabularx}{\textwidth}{@{\extracolsep{\fill}}lccccccccc@{}}
 \hline
 \hline
-&&&&Default priors & & & & Default + polarization priors  \\ 
+&&&&Default weights & & & & Default + polarization weights  \\ 
 \cmidrule{4-6} \cmidrule{8-10} 
 Variables & Units && Location & 68$\%$ CI $^{\dagger}$ &95$\%$ CI && Location & 68$\%$ CI  & 95$\%$ CI \\ 
 \hline 
